--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
+    "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +23,13 @@
   },
   "homepage": "https://github.com/Dev-ThangNguyen/nodejs_blog#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "dart-sass": "^1.25.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
+    "sass": "^1.49.7"
   }
 }
